# foundamental_coding_challenge

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/config/: .env  config.toml
api/fullstack_challenge_api/: __init__.py  app.py  docs.py  main.py
api/fullstack_challenge_api/routes/: __init__.py  companies.py  deals.py  init.py
api/fullstack_challenge_api/utils/: config.py  db.py
database/: .env
frontend/: .prettierignore  Dockerfile  package.json
frontend/components/Layout/: Layout.tsx  Navigation.tsx
frontend/components/UI/: Card.tsx
frontend/components/companies/: CompanyEdit.tsx  CompanyItem.module.css  CompanyItem.tsx  CompanyList.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/[companyId]/: index.tsx
frontend/types/: types.ts
